# gemphy

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  book.toml  new.md  test.md
.github/workflows/: docs.yml  rust-ci.yml  rust.yml
github/workflows/: ci.yml
src/: constants.rs  dynamics.rs  geometry.rs  knot.rs  lib.rs  medium.rs  surface.rs  system.rs  tests.rs  transceiver.rs
