[package]
name = "gemphy"
version = "0.1.0"
edition = "2024"

[dependencies]
num-complex = "0.4"
serde = { version = "1.0", features = ["derive"] }
csv = "1.3"
anyhow = "1.0"
# uom = { version = "0.37.0", features = ["f64", "si", "autoconvert"] }
# num-complex = "0.4"
# serde = { version = "1.0", features = ["derive"] }