[package]
name = "gemphy"
version = "0.2.1"
edition = "2024"
authors = ["Troy Deville <tsndeville@gmail.com>"]
description = "GEM Physics: Derives physical constants from geometric impedance in a horn torus vacuum."
repository = "https://github.com/troydeville/gemphy"
license = "GPL-3.0"
keywords = ["physics", "unified-theory", "geometry", "impedance", "simulation"]
categories = ["science"]

[dependencies]
num-complex = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
csv = "1.3"
anyhow = "1.0"
physical_constants = "=0.4.1"
num-traits = "0.2.19"
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"


[dev-dependencies]
approx = "0.5"  # For floating-point assertions in tests
physical_constants = "=0.4.1"

[lib]
crate-type = ["cdylib", "rlib"]
